--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -15,9 +15,28 @@
   left: 55vw; 
   transform: translate(-50%, -50%); 
   background-color: white; 
-  padding: 10px; 
+  padding: 20px; 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
   z-index: 1000; 
+}
+
+.password-input-container{
+  padding:0 0 15px 0;
+}
+
+.password-input-container > .password-container {
+  display: flex;
+}
+
+.password-input-container > .password-container > .btn-visible{
+  background-color: transparent;
+  color: #cecece;
+  width: 1vw;
+
+}
+
+.floating-master-password > input{
+  margin:0 0 20px 0;
 }
 
 
